--- a/frontend/main.html
+++ b/frontend/main.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: Sunnary2604 50614684+Sunnary2604@users.noreply.github.com
+ * @Date: 2023-11-28 20:20:44
+ * @LastEditors: Sunnary2604 50614684+Sunnary2604@users.noreply.github.com
+ * @LastEditTime: 2023-11-29 19:55:44
+ * @FilePath: \creative-coding-final\frontend\main.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,5 +24,6 @@
 
   <body>
     <script src="draft.js"></script>
+    <script src="utills.js"></script>
   </body>
 </html>
